<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, ServiceConsumerActivity!</string>
	<string name="app_name">SimpleServiceConsumer</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="service_not_bound">Service not bound</string>
	<string name="service_connected">Service connected</string>
	<string name="service_crashed">Service crashed</string>
	<string name="report_appears_here">Report appears here</string>
	<string name="bind">Bind</string>
	<string name="city_name_or_zip_code">City name or zip code</string>
	<string name="query">Query</string>
	<string name="unbind">Unbind</string>
</resources>
